--- a/notebooks/Belief Prediction.ipynb
+++ b/notebooks/Belief Prediction.ipynb
@@ -125,8 +125,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: [2020-11-02 11:44:39] indra.tools.assemble_corpus - Loading ../data/bioexp_asmb_preassembled.pkl...\n",
-      "INFO: [2020-11-02 11:46:18] indra.tools.assemble_corpus - Loaded 895580 statements\n"
+      "INFO: [2020-11-20 16:03:22] indra.tools.assemble_corpus - Loading ../data/bioexp_asmb_preassembled.pkl...\n",
+      "INFO: [2020-11-20 16:04:25] indra.tools.assemble_corpus - Loaded 895580 statements\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 895580/895580 [00:04<00:00, 187354.66it/s]\n"
+      "100%|██████████| 895580/895580 [00:03<00:00, 290511.38it/s]\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "metadata": {
     "code_folding": [],
     "hide_input": false
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0
@@ -227,8 +227,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 705022/705022 [00:21<00:00, 32943.79it/s]\n",
-      "100%|██████████| 705022/705022 [00:01<00:00, 429241.08it/s]\n"
+      "100%|██████████| 705022/705022 [00:22<00:00, 30735.49it/s]\n",
+      "100%|██████████| 705022/705022 [00:01<00:00, 372655.65it/s]\n"
      ]
     },
     {
@@ -457,7 +457,7 @@
        "(_, _, M, P, T)      0.000020        0.000000"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "(1083, 21)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,11 +568,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "hide_input": false,
     "scrolled": false
    },
@@ -583,7 +581,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
