--- a/notebooks/Belief Prediction - Exploration and Orphans.ipynb
+++ b/notebooks/Belief Prediction - Exploration and Orphans.ipynb
@@ -668,9 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Unweighted"
    ]
@@ -679,7 +677,6 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -731,9 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -755,9 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1175,9 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5337,18 +5328,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Properties of belief scores under different assumptions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "To illustrate the properties of belief scores under different assumptions about reader performance and dependence, we generated simulated data using the following approach. We imagine a space of $(relation,sentence)$ combinations defined for a defined text corpus and set of relation types, and over this space, with overall size $n$, we have a baseline probability, prior to the consideration of any reading systems, of a particular $(relation_i,sentence_j)$ being correct, denoted $p(corr)$. Then, for each reader, we define the recall and false discovery rate (FDR) as follows:\n",
     "\n",
@@ -5379,8 +5366,7 @@
     "code_folding": [
      0,
      104
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -5509,9 +5495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Problem with this approach--high false positive rate allows readers\n",
@@ -5525,9 +5509,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "When the space of incorrect statements is very large, this means that the chance of overlap between readers in incorrect statements is small. However, the probability of an individual reader producing an error"
    ]
@@ -5535,9 +5517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sim_reader_freq, _ = get_reader_freq_from_curation(df, ['r1', 'r2', 'r3'], )\n",
@@ -5547,9 +5527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sim.summarize(df)"
@@ -5558,9 +5536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sim.joint_probs(df)"
@@ -5569,9 +5545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cps = sim.corr_probs(df)\n",
@@ -5582,7 +5556,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -5593,7 +5566,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "source": [
@@ -5602,9 +5574,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Some observations. First, if recall and fdr are equal and the same for both readers, having evidence from both readers doesn't increase p(correct), because adding a second reader adds somewhat to the coverage of the correct statements but also adds an equal number of false positives.\n",
     "\n",
@@ -7181,6 +7151,72 @@
     "pa_dict = {'r1': ['correct'], 'r2': ['r1', 'correct']}\n",
     "x_dict = {'r1': 1, 'r2': 1}\n",
     "ddrg(x_dict, pa_dict, df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build single evidence stmt corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ev_curations = {}\n",
+    "for reader in reader_list:\n",
+    "    r_curations = get_raw_curations(reader_input[reader]['source_list'], stmts_by_hash)\n",
+    "    ev_curations.update(r_curations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Process curations into statements with single evidences:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stmt_data_from_curations(curations):\n",
+    "    ev_stmts = []\n",
+    "    ev_corrs = []\n",
+    "    for pa_hash, cur_dict in tqdm(curations.items()):\n",
+    "        stmt = stmts_by_hash[pa_hash]\n",
+    "        for ev in stmt.evidence:\n",
+    "            ev_cur_list = cur_dict.get(ev.get_source_hash())\n",
+    "            # This evidence hasn't been curated\n",
+    "            if ev_cur_list is None:\n",
+    "                continue\n",
+    "            correct_set = set()\n",
+    "            for ev_cur in ev_cur_list:\n",
+    "                # Get whether the curation is correct    \n",
+    "                if ev_cur['tag'] in ('correct', 'hypothesis', 'activity_vs_amt'):\n",
+    "                    correct_set.add(1)\n",
+    "                else:\n",
+    "                    correct_set.add(0)\n",
+    "            # If the correctness set has more than 1 member there is disagreement,\n",
+    "            # so skip\n",
+    "            if len(correct_set) > 1:\n",
+    "                continue\n",
+    "            else:\n",
+    "                correct = list(correct_set)[0]\n",
+    "            # Make a copy of the statement with the single curated evidence\n",
+    "            stmt_copy = copy(stmt)\n",
+    "            stmt_copy.evidence = [ev]\n",
+    "            # Store the 1-evidence stmt and the corresponding correctness\n",
+    "            ev_stmts.append(stmt_copy)\n",
+    "            ev_corrs.append(correct)\n",
+    "    return (ev_stmts, ev_corrs)\n",
+    "\n",
+    "ev_stmts, ev_corrs = stmt_data_from_curations(ev_curations)"
    ]
   },
   {
