--- a/notebooks/Reader_overlap_and_error_analysis.ipynb
+++ b/notebooks/Reader_overlap_and_error_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reader curation and error analysis"
+    "# Reader overlap and error analysis"
    ]
   },
   {
