Add modified files

--- a/notebooks/Belief Prediction - Exploration and Orphans.ipynb
+++ b/notebooks/Belief Prediction - Exploration and Orphans.ipynb
@@ -19,7 +19,7 @@
    "execution_count": 30,
    "metadata": {
     "code_folding": [],
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -84,7 +84,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -325,9 +325,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -404,9 +402,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -438,9 +434,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
