Update BioGrid benchmark

--- a/notebooks/Biogrid benchmark.ipynb
+++ b/notebooks/Biogrid benchmark.ipynb
@@ -186,34 +186,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing BioGRID rows: 0it [00:00, ?it/s]INFO: [2022-08-10 01:27:26] indra.ontology.bio.ontology - Loading INDRA bio ontology from cache at /Users/johnbachman/.indra/bio_ontology/1.27/bio_ontology.pkl\n",
-      "Processing BioGRID rows: 1974590it [03:35, 9144.57it/s]  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reload = True\n",
+    "reload = False\n",
     "\n",
-    "bg_stmts_file = join(opath, 'bg_stmts_asmb_updated.pkl')\n",
+    "bg_stmts_file = join(opath, 'bg_stmts_asmb_updated_tab3.pkl')\n",
     "\n",
     "# Can obtain this file by running\n",
-    "# wget https://downloads.thebiogrid.org/Download/BioGRID/Release-Archive/BIOGRID-4.2.192/BIOGRID-ALL-4.2.192.tab2.zip\n",
+    "# wget https://downloads.thebiogrid.org/Download/BioGRID/Release-Archive/BIOGRID-4.2.192/BIOGRID-ALL-4.2.192.tab3.zip\n",
     "# and\n",
-    "# unzip BIOGRID-ALL-4.2.192.tab2.zip\n",
+    "# unzip BIOGRID-ALL-4.2.192.tab3.zip\n",
     "# ...in the notebooks directory\n",
-    "biogrid_file = 'BIOGRID-ALL-4.2.192.tab2.txt'\n",
+    "biogrid_file = 'BIOGRID-ALL-4.2.192.tab3.txt'\n",
     "\n",
     "if reload:\n",
-    "    bp = BiogridProcessor(biogrid_file=biogrid_file, physical_only=True, tab_version=2)\n",
+    "    bp = BiogridProcessor(biogrid_file=biogrid_file, physical_only=True)\n",
     "    bg_stmts_raw = bp.statements\n",
     "    # De-duplicate the Biogrid statements\n",
     "    pa = Preassembler(bo, stmts=bg_stmts_raw)\n",
@@ -235,25 +226,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: [2022-08-10 01:47:32] indra.tools.assemble_corpus - Filtering 801930 statements for type Complex...\n",
-      "INFO: [2022-08-10 01:47:32] indra.tools.assemble_corpus - 801930 statements after filter...\n",
-      "INFO: [2022-08-10 01:47:32] indra.tools.assemble_corpus - Filtering 801930 statements for ones containing genes only...\n",
-      "INFO: [2022-08-10 01:47:35] indra.tools.assemble_corpus - 479604 statements after filter...\n",
-      "INFO: [2022-08-10 01:47:35] indra.tools.assemble_corpus - Filtering 479604 statements for human genes only...\n",
-      "INFO: [2022-08-10 01:47:40] indra.tools.assemble_corpus - 479560 statements after filter...\n",
-      "INFO: [2022-08-10 01:47:41] indra.tools.assemble_corpus - Filtering 734208 statements for type Complex...\n",
-      "INFO: [2022-08-10 01:47:42] indra.tools.assemble_corpus - 166703 statements after filter...\n",
-      "INFO: [2022-08-10 01:47:42] indra.tools.assemble_corpus - Filtering 166703 statements for ones containing genes only...\n",
-      "INFO: [2022-08-10 01:47:46] indra.tools.assemble_corpus - 127300 statements after filter...\n",
-      "INFO: [2022-08-10 01:47:46] indra.tools.assemble_corpus - Filtering 127300 statements for human genes only...\n",
-      "INFO: [2022-08-10 01:47:47] indra.tools.assemble_corpus - 127292 statements after filter...\n"
+      "INFO: [2022-08-11 00:47:04] indra.tools.assemble_corpus - Filtering 886283 statements for type Complex...\n",
+      "INFO: [2022-08-11 00:47:07] indra.tools.assemble_corpus - 886283 statements after filter...\n",
+      "INFO: [2022-08-11 00:47:07] indra.tools.assemble_corpus - Filtering 886283 statements for ones containing genes only...\n",
+      "INFO: [2022-08-11 00:47:17] indra.tools.assemble_corpus - 843285 statements after filter...\n",
+      "INFO: [2022-08-11 00:47:17] indra.tools.assemble_corpus - Filtering 843285 statements for human genes only...\n",
+      "INFO: [2022-08-11 00:47:27] indra.tools.assemble_corpus - 484719 statements after filter...\n",
+      "INFO: [2022-08-11 00:47:29] indra.tools.assemble_corpus - Filtering 734208 statements for type Complex...\n",
+      "INFO: [2022-08-11 00:47:31] indra.tools.assemble_corpus - 166703 statements after filter...\n",
+      "INFO: [2022-08-11 00:47:31] indra.tools.assemble_corpus - Filtering 166703 statements for ones containing genes only...\n",
+      "INFO: [2022-08-11 00:47:37] indra.tools.assemble_corpus - 127300 statements after filter...\n",
+      "INFO: [2022-08-11 00:47:37] indra.tools.assemble_corpus - Filtering 127300 statements for human genes only...\n",
+      "INFO: [2022-08-11 00:47:38] indra.tools.assemble_corpus - 127292 statements after filter...\n"
      ]
     }
    ],
@@ -2369,6 +2360,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How many statements not in BioGRID with belief > 0.9?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([       nan, 0.95721213, 0.90853832, 0.80859618, 0.67416465,\n",
+       "       0.62609097, 0.49259538, 0.38429845, 0.29224927, 0.21697841,\n",
+       "       0.17401468, 0.12209029, 0.03361996])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(num_found) / np.array(num_rev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 15.315394127964652,\n",
+       " 825.8613342454419,\n",
+       " 1026.1085461533885,\n",
+       " 2075.0788077377274,\n",
+       " 4755.7870007077945,\n",
+       " 3993.96337417613,\n",
+       " 5058.904745039134,\n",
+       " 2821.374457530198,\n",
+       " 307.89236933551547,\n",
+       " 4445.901093186391,\n",
+       " 3116.3547253859715,\n",
+       " 165.14125289809374]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_found"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2194.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add up counts for last 3 bins (0.9-0.95, 0.95-0.99, and 0.99-1)\n",
+    "sum([in_bg_info['not_in_bg_cts'][ix] for ix in (-3, -2, -1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2826874089716672"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(num_found) / sum(num_rev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1867.284"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "15.315 + 825.861 + 1026.108"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8454545454545455"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "186/220"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8571428571428571"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6/7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Plot the return on curation effort in terms of number of true, uncurated statements found as a function of the number statements manually reviewed."
    ]
   },
@@ -3204,6 +3365,18 @@
    ],
    "source": [
     "len(bg_stmts_asmb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mplayer\n",
+    "p = mplayer.Player()\n",
+    "success_file = '/Users/johnbachman/Downloads/success.m4a'\n",
+    "p.loadfile(success_file)"
    ]
   },
   {
