Further updates to BioGrid nb

--- a/notebooks/Biogrid benchmark.ipynb
+++ b/notebooks/Biogrid benchmark.ipynb
@@ -344,6 +344,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How many unique Statements represented by BioGRID PPIs?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "479560"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bg_hashes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Plot belief distribution along with BG/not in BG status:"
    ]
   },
@@ -2046,7 +2073,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2067,6 +2096,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How many statements in BioGRID?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26093"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_in_bg = len([s for bg_stmts in in_bg_info['in_bg_stmts'].values() for s in bg_stmts])\n",
+    "num_in_bg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many statements not in BioGRID?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101199"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_not_in_bg_stmts = [s for bel_bin, bel_stmts in in_bg_info['not_in_bg_stmts'].items()\n",
+    "                         for s in bel_stmts]\n",
+    "len(all_not_in_bg_stmts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First way to calculate the number of correct but uncurated Statements.\n",
     "Get the expected number of true statements:"
    ]
   },
@@ -2095,35 +2184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How many statements in BioGRID?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26093"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_in_bg = len([s for bg_stmts in in_bg_info['in_bg_stmts'].values() for s in bg_stmts])\n",
-    "num_in_bg"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How many true uncurated statements do we expect to find?"
+    "The subtract away the number in BioGRID (assuming all Statements in BioGRID are correct, which may not always be the case), leaving behind the residual number of correct Statements:"
    ]
   },
   {
@@ -2147,45 +2208,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_not_in_bg_stmts = [s for bel_bin, bel_stmts in in_bg_info['not_in_bg_stmts'].items()\n",
-    "                         for s in bel_stmts]"
+    "As a proportion relative to the size of BioGRID:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "101199"
+       "0.059654022646850755"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(all_not_in_bg_stmts)"
+    "(expect_true - num_in_bg) / len(bg_hashes)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the expected number of true statements:"
+    "As an upper bound, we treat the probability of correctness as independent of Statements being in BioGRID or not, and simply use the belief to calculate the expected number of true Statements among the Statements not in BioGRID:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 99,
    "metadata": {
     "scrolled": true
    },
@@ -2196,13 +2254,71 @@
        "38335.964391598485"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum([s.belief for s in all_not_in_bg_stmts])"
+    "expect_true_indep = np.sum([s.belief for s in all_not_in_bg_stmts])\n",
+    "expect_true_indep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a proportion relative to the size of BioGRID:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07993987069730271"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expect_true_indep / len(bg_hashes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fraction of PPIs in BG:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43487.84235529258"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frac_not_in_bg = len(all_not_in_bg_stmts) / len(indra_stmts_filt_cplx)\n",
+    "frac_correct = expect_true / len(indra_stmts_filt_cplx)\n",
+    "indep_corr_not_bg = frac_not_in_bg * frac_correct * len(indra_stmts_filt_cplx)\n",
+    "indep_corr_not_bg"
    ]
   },
   {
@@ -2365,69 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([       nan, 0.95721213, 0.90853832, 0.80859618, 0.67416465,\n",
-       "       0.62609097, 0.49259538, 0.38429845, 0.29224927, 0.21697841,\n",
-       "       0.17401468, 0.12209029, 0.03361996])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(num_found) / np.array(num_rev)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " 15.315394127964652,\n",
-       " 825.8613342454419,\n",
-       " 1026.1085461533885,\n",
-       " 2075.0788077377274,\n",
-       " 4755.7870007077945,\n",
-       " 3993.96337417613,\n",
-       " 5058.904745039134,\n",
-       " 2821.374457530198,\n",
-       " 307.89236933551547,\n",
-       " 4445.901093186391,\n",
-       " 3116.3547253859715,\n",
-       " 165.14125289809374]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_found"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2436,79 +2490,83 @@
        "2194.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Add up counts for last 3 bins (0.9-0.95, 0.95-0.99, and 0.99-1)\n",
-    "sum([in_bg_info['not_in_bg_cts'][ix] for ix in (-3, -2, -1)])"
+    "top_bins_uncurated = np.sum(num_rev[:4])\n",
+    "top_bins_uncurated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many expected to be correct?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2826874089716672"
+       "1867.285274526795"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(num_found) / sum(num_rev)"
+    "# Add num_found for top 3 bins\n",
+    "top_bins_exp_correct = np.sum(num_found[:4])\n",
+    "top_bins_exp_correct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is curation yield for top bins?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1867.284"
+       "0.8510871807323588"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "15.315 + 825.861 + 1026.108"
+    "top_bins_exp_correct / top_bins_uncurated"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8454545454545455"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "186/220"
+    "Comparison:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2517,13 +2575,91 @@
        "0.8571428571428571"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "6/7"
+    "6 / 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Repeat calculation for lower bins:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3078.0, (0.8, 0.9, '0.8_0.9')),\n",
+       " (7596.0, (0.7, 0.8, '0.7_0.8')),\n",
+       " (8108.0, (0.6, 0.7, '0.6_0.7')),\n",
+       " (13164.0, (0.5, 0.6, '0.5_0.6')),\n",
+       " (9654.0, (0.4, 0.5, '0.4_0.5'))]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(num_rev[4:9], bins_reversed[3:8]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Total statements belief 0.4-0.9:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41600.0"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(num_rev[4:9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18705.108385190983"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(num_found[4:9])"
    ]
   },
   {
@@ -3345,6 +3481,71 @@
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.savefig(fig_path('return_on_curation', 'pdf'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example interactions described in paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KIF1C-RAB6A interaction:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "192715 Activation(RAB6A(), KIF1C()) 0.369 1\n",
+      "213492 Complex(GST(), KIF1C(), RAB6A()) 0.4543999999999999 1\n",
+      "329822 Complex(BICDL1(), KIF1C(), RAB6A()) 0.16496032261901458 2\n",
+      "355469 Complex(KIF1C(), KIFC1(), RAB6A()) 0.17531375577662733 1\n",
+      "355470 Complex(KIF1C(), RAB6A()) 0.8163005821840881 40\n",
+      "645461 Inhibition(RAB6A(), KIF1C()) 0.369 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, stmt in enumerate(indra_stmts):\n",
+    "    if 'KIF1C' in str(stmt) and 'RAB6A' in str(stmt):\n",
+    "        print(idx, stmt, stmt.belief, len(stmt.evidence))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evidence sources for the KIF1C-RAB6A interaction:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'reach', 'sparser'}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set([ev.source_api for ev in indra_stmts[355470].evidence])"
    ]
   }
  ],
