Move fig 4/5 reproducibility instructions to README

--- a/notebooks/Reader_overlap_and_error_analysis.ipynb
+++ b/notebooks/Reader_overlap_and_error_analysis.ipynb
@@ -5,9 +5,8 @@
    "metadata": {},
    "source": [
     "Prerequisite for this notebook:\n",
-    "* `make output/curation_dataset_inc.pkl`\n",
-    " * Runs `bioexp_paper/bioexp/curation/group_curations.py`\n",
-    " * Generates various curation dataset pickles from multiple reader curation tags in the DB\n",
+    "* `make data/curation/multireader_curation_dataset.pkl`\n",
+    " * This runs `bioexp_paper/bioexp/curation/group_curations.py` to generate curation dataset pickle files.\n",
     "\n",
     "Figure 4 panels:\n",
     "* Fig 4B, Table 2: `make output/fig4_reach_curve.pdf`, which runs `bioexp/figures/figure4/curated_correctness.py` and produces the following files:\n",
