Finalize dataset name -> {multireader|extended}_curation_dataset.pkl

--- a/notebooks/Depmap Benchmark.ipynb
+++ b/notebooks/Depmap Benchmark.ipynb
@@ -262,7 +262,7 @@
    "source": [
     "stmts_by_hash = {s.get_hash(): s for s in all_stmts}\n",
     "# Load the curated data\n",
-    "curation_data_file = 'curation_dataset_with_bg_psp.pkl'\n",
+    "curation_data_file = '../data/curation/extended_curation_dataset.pkl'\n",
     "kge_df = load_curation_data(curation_data_file)\n",
     "# Get statements from curation dataframe\n",
     "kge_stmts = stmts_for_df(kge_df, stmts_by_hash)\n",
