--- a/notebooks/Biogrid benchmark.ipynb
+++ b/notebooks/Biogrid benchmark.ipynb
@@ -121,7 +121,7 @@
     "stmts_by_hash = {s.get_hash(): s for s in indra_stmts}\n",
     "\n",
     "# Load the statement curation data\n",
-    "curation_data_file = 'curation_dataset_with_bg_psp.pkl'\n",
+    "curation_data_file = '../data/curation/extended_curation_dataset.pkl'\n",
     "kge_df = load_curation_data(curation_data_file)\n",
     "\n",
     "# Get statements from curation dataframe\n",
@@ -3566,7 +3566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
